responsivity fix 2, floating header fixed on mobile

--- a/src/styles/_responsivity.scss
+++ b/src/styles/_responsivity.scss
@@ -209,8 +209,7 @@
       }  
       .stats {
         padding: 2rem 1.5rem 0 1.5rem;
-      }
-      
+      }     
 }
 @media (max-width: 595px) {
     .games {
@@ -259,11 +258,6 @@
       .gallery {
       padding: 0rem 1.5rem 1.5rem 1.5rem;
       }  
-      .media img {
-       
-        min-height: 51vh;
-        
-    }
 }
 @media (max-width: 506px) {
   .gallery {
