--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -800,9 +800,6 @@ input {
   .gallery {
     padding: 0rem 1.5rem 1.5rem 1.5rem;
   }
-  .media img {
-    min-height: 51vh;
-  }
 }
 @media (max-width: 506px) {
   .gallery {
